[package]
name = "a2"
version = "0.6.2"
authors = [
    "Harry Bairstow <harry@walletconnect.com>",
    "Julius de Bruijn <julius@nauk.io>",
    "Sergey Tkachenko <seriy.tkachenko@gmail.com>",
]
license = "MIT"
readme = "README.md"
description = "A native, asynchronous Apple push notification client"
keywords = ["apns", "apple", "push", "async", "http2"]
repository = "https://github.com/walletconnect/a2.git"
homepage = "https://github.com/walletconnect/a2"
documentation = "https://docs.rs/a2"
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
openssl = "0.10"
futures = "0.3"
base64 = "0.21"
log = "0.4"
reqwest = { version = "0.11", features = ["json", "native-tls"] }

[dev-dependencies]
argparse = "0.2"
pretty_env_logger = "0.5"
indoc = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
